[package]
name = "solana-libra-benchmark"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = "1.2.0"
prost = "0.5.0"
rand = "0.6.5"
regex = { version = "1.3.0", default-features = false, features = ["std", "perf"] }
structopt = "0.3.2"
num_cpus = "1.10.1"
walkdir = "2.2.9"

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto", version = "0.1.0" }
solana-libra-client = { path = "../client", version = "0.1.0" }
solana-libra-config = { path = "../config", version = "0.1.0" }
failure = { package = "solana_libra_failure_ext", path = "../common/failure_ext", version = "0.1.0" }
solana-libra-generate-keypair = { path = "../config/generate-keypair", version = "0.1.0" }
libra_wallet = { path = "../client/libra_wallet", version = "0.1.0" }
libra-swarm = { path = "../libra-swarm", version = "0.1.0" }
solana-libra-logger = { path = "../common/logger", version = "0.1.0" }
solana-libra-metrics = { path = "../common/metrics", version = "0.1.0" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
rusty-fork = "0.2.1"
solana-libra-tools = { path = "../common/tools", version = "0.1.0" }
solana-libra-types = { path = "../types", version = "0.1.0" }
solana_libra_transaction_builder = { path = "../language/transaction_builder", version = "0.1.0" }

[dev-dependencies]
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["testing"] }

[features]
default = []
testing = ["solana-libra-crypto/testing", "libra-swarm/testing"]
