[package]
name = "solana-libra-benchmark"
version = "0.0.1-sol4"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
description = "Libra benchmark"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = "1.2.0"
prost = "0.5.0"
rand = "0.7.0"
regex = { version = "1.3.0", default-features = false, features = ["std", "perf"] }
structopt = "0.3.2"
num_cpus = "1.10.1"
walkdir = "2.2.9"

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto", version = "0.0.1-sol4" }
solana-libra-client = { path = "../client", version = "0.0.1-sol4" }
solana_libra_config = { path = "../config", version = "0.0.1-sol4" }
failure = { package = "solana_libra_failure_ext", path = "../common/failure_ext", version = "0.0.1-sol4" }
solana-libra-generate-keypair = { path = "../config/generate-keypair", version = "0.0.1-sol4" }
libra_wallet = { path = "../client/libra_wallet", version = "0.0.1-sol4" }
libra-swarm = { path = "../libra-swarm", version = "0.0.1-sol4" }
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol4" }
solana_libra_metrics = { path = "../common/metrics", version = "0.0.1-sol4" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4" }
rusty-fork = "0.2.1"
solana_libra_tools = { path = "../common/tools", version = "0.0.1-sol4" }
solana_libra_types = { path = "../types", version = "0.0.1-sol4" }
solana_libra_transaction_builder = { path = "../language/transaction_builder", version = "0.0.1-sol4" }

[dev-dependencies]
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4", features = ["testing"] }

[features]
default = []
testing = ["solana_libra_crypto/testing", "libra-swarm/testing"]
