[package]
name = "solana_libra_client"
version = "0.0.0-sol15"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra client"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bincode = "1.1.1"
futures = "0.1.28"
grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
hex = "0.3.2"
hyper = "0.12.33"
itertools = "0.8.0"
proptest = "0.9.2"
rustyline = "4.1.0"
tokio = "0.1.22"
rust_decimal = "1.0.1"
num-traits = "0.2"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.2.15"
tempfile = "3.1.0"

admission_control_proto = { version = "0.0.0-sol15", path = "../admission_control/admission_control_proto", package = "solana_libra_admission_control_proto" }
config = { path = "../config", package = "solana_libra_config", version = "0.0.0-sol15" }
crash_handler = { path = "../common/crash_handler", package = "solana_libra_crash_handler", version = "0.0.0-sol15" }
crypto = { path = "../crypto/legacy_crypto", package = "solana_libra_crypto", version = "0.0.0-sol15" }
nextgen_crypto = { path = "../crypto/nextgen_crypto", package = "solana_libra_nextgen_crypto", version = "0.0.0-sol15" }
failure = { path = "../common/failure_ext", package = "solana_libra_failure_ext", version = "0.0.0-sol15" }
libc = "0.2.60"
libra_wallet = { path = "./libra_wallet", package = "solana_libra_wallet", version = "0.0.0-sol15" }
logger =  { path = "../common/logger", package = "solana_libra_logger" }
metrics = { path = "../common/metrics", package = "solana_libra_metrics", version = "0.0.0-sol15" }
proto_conv = { path = "../common/proto_conv", package = "solana_libra_proto_conv", version = "0.0.0-sol15" }
types = { path = "../types", package = "solana_libra_types", version = "0.0.0-sol15" }
vm_genesis = { path = "../language/vm/vm_genesis", package = "solana_libra_vm_genesis", version = "0.0.0-sol15" }
