[package]
name = "solana-libra-client"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bincode = "1.1.1"
chrono = "0.4.7"
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
hex = "0.3.2"
itertools = "0.8.0"
proptest = "0.9.2"
rustyline = "5.0.3"
rust_decimal = "1.0.2"
num-traits = "0.2"
reqwest = { version = "0.9.19", default-features = false }
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.2"

solana_libra_admission_control_proto = { version = "0.1.0", path = "../admission_control/admission_control_proto" }
solana-libra-config = { path = "../config" }
solana_libra_crash_handler = { path = "../common/crash_handler" }
solana-libra-crypto = { path = "../crypto/crypto" }
failure = { package = "solana_libra_failure_ext", path = "../common/failure_ext" }
libra_wallet = { path = "./libra_wallet" }
solana-libra-logger =  { path = "../common/logger" }
solana-libra-metrics = { path = "../common/metrics" }
solana-libra-types = { path = "../types" }
solana-libra-tools = { path = "../common/tools/" }
solana_libra_transaction_builder = { path = "../language/transaction_builder" }

[dev-dependencies]
solana-libra-crypto = { path = "../crypto/crypto", features = ["testing"] }
solana-libra-types = { path = "../types", features = ["testing"]}

[features]
default = []
testing = ["solana-libra-types/testing", "solana-libra-crypto/testing"]
