[package]
name = "solana-libra-client"
version = "0.0.1-sol4"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra client"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bincode = "1.1.1"
chrono = "0.4.7"
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
hex = "0.3.2"
itertools = "0.8.0"
proptest = "0.9.2"
rustyline = "5.0.3"
rust_decimal = "1.0.2"
num-traits = "0.2"
reqwest = { version = "0.9.19", default-features = false }
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.2"

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto", version = "0.0.1-sol4" }
solana_libra_config = { path = "../config", version = "0.0.1-sol4" }
solana_libra_crash_handler = { path = "../common/crash_handler", version = "0.0.1-sol4" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4" }
failure = { package = "solana_libra_failure_ext", path = "../common/failure_ext", version = "0.0.1-sol4" }
libra_wallet = { path = "./libra_wallet", version = "0.0.1-sol4" }
solana_libra_logger =  { path = "../common/logger", version = "0.0.1-sol4" }
solana_libra_metrics = { path = "../common/metrics", version = "0.0.1-sol4" }
solana_libra_types = { path = "../types", version = "0.0.1-sol4" }
solana_libra_tools = { path = "../common/tools/", version = "0.0.1-sol4" }
solana_libra_transaction_builder = { path = "../language/transaction_builder", version = "0.0.1-sol4" }

[dev-dependencies]
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4", features = ["testing"] }
solana_libra_types = { path = "../types", version = "0.0.1-sol4", features = ["testing"]}

[features]
default = []
testing = ["solana_libra_types/testing", "solana_libra_crypto/testing"]
