[package]
name = "solana-libra-config"
version = "0.0.1-sol"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra config"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
edition = "2018"

[dependencies]
get_if_addrs = { version = "0.5.3", default-features = false }
hex = { version = "0.3.2", default-features = false }
mirai-annotations = "1.4.0"
parity-multiaddr = { version = "0.5.0", default-features = false }
rand = "0.6.5"
serde = { version = "1.0.99", default-features = false }
toml = { version = "0.5.3", default-features = false }
prost = "0.5.0"

solana-libra-crypto = { path = "../crypto/crypto", version = "0.0.1-sol" }
solana-libra-logger = { path = "../common/logger", version = "0.0.1-sol" }
failure = { path = "../common/failure_ext", version = "0.0.1-sol", package = "solana_libra_failure_ext" }
solana-libra-tools = { path = "../common/tools", version = "0.0.1-sol" }
solana-libra-types = { path = "../types", version = "0.0.1-sol" }

[dev-dependencies]
solana-libra-types = { path = "../types", version = "0.0.1-sol", features = ["testing"] }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.0.1-sol", features = ["testing"] }

[features]
default = []
testing = ["solana-libra-crypto/testing", "solana-libra-types/testing"]
