[package]
name = "solana_libra_config"
version = "0.0.1-sol4"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra config"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
edition = "2018"

[dependencies]
get_if_addrs = { version = "0.5.3", default-features = false }
hex = { version = "0.3.2", default-features = false }
mirai-annotations = "1.4.0"
parity-multiaddr = { version = "0.5.0", default-features = false }
rand = "0.7.0"
serde = { version = "1.0.99", default-features = false }
toml = { version = "0.5.3", default-features = false }
prost = "0.5.0"

solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4" }
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol4" }
failure = { path = "../common/failure_ext", version = "0.0.1-sol4", package = "solana_libra_failure_ext" }
solana_libra_tools = { path = "../common/tools", version = "0.0.1-sol4" }
solana_libra_types = { path = "../types", version = "0.0.1-sol4" }

[dev-dependencies]
solana_libra_types = { path = "../types", version = "0.0.1-sol4", features = ["testing"] }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol4", features = ["testing"] }

[features]
default = []
testing = ["solana_libra_crypto/testing", "solana_libra_types/testing"]
