[package]
name = "solana-libra-consensus"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
bytes = "0.4.12"
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["io-compat", "compat"] }
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
mirai-annotations = { version = "1.4.0", default-features = false }
num-derive = { version = "0.2.5", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
parity-multiaddr = { version = "0.5.0", default-features = false }
prost = "0.5.0"
rand = { version = "0.6.5", default-features = false }
rmp-serde = { version = "0.13.7", default-features = false }
rusty-fork = { version = "0.2.2", default-features = false }
serde = { version = "1.0.99", default-features = false }
serde_json = "1.0"
siphasher = { version = "0.3.0", default-features = false }
termion = { version = "1.5.3", default-features = false }
tokio = { version = "0.1.22", default-features = false }
prometheus = { version = "0.7.0", default-features = false }

solana_libra_canonical_serialization = { path = "../common/canonical_serialization", version = "0.1.0" }
solana-libra-channel = { path = "../common/channel", version = "0.1.0" }
solana-libra-config = { path = "../config", version = "0.1.0" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
solana_libra_debug_interface = { path = "../common/debug_interface", version = "0.1.0" }
solana-libra-executor = { path = "../execution/executor", version = "0.1.0" }
failure = { path = "../common/failure_ext", version = "0.1.0", package = "solana_libra_failure_ext" }
solana-libra-logger = { path = "../common/logger", version = "0.1.0" }
solana-libra-mempool = { path = "../mempool", version = "0.1.0" }
solana-libra-metrics = { path = "../common/metrics", version = "0.1.0" }
solana-libra-network = { path = "../network", version = "0.1.0" }
solana-libra-prost-ext = { path = "../common/prost-ext", version = "0.1.0" }
solana_libra_state_synchronizer = { path = "../state_synchronizer", version = "0.1.0" }
solana-libra-schemadb = { path = "../storage/schemadb", version = "0.1.0" }
solana_libra_storage_client = { path = "../storage/storage_client", version = "0.1.0" }
solana-libra-tools = { path = "../common/tools", version = "0.1.0" }
solana-libra-types = { path = "../types", version = "0.1.0" }
solana_libra_vm_runtime = { path = "../language/vm/vm_runtime", version = "0.1.0" }

[dev-dependencies]
cached = "0.9.0"
parity-multiaddr = "0.5.0"
rusty-fork = "0.2.2"

solana-libra-storage-service = { path = "../storage/storage-service", version = "0.1.0" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["testing"]}
solana-libra-types = { path = "../types", version = "0.1.0", features = ["testing"]}
solana_libra_vm_genesis = { path = "../language/vm/vm_genesis", version = "0.1.0" }
solana_libra_vm_validator = { path = "../vm_validator", version = "0.1.0" }
proptest = "0.9.4"

[features]
default = []
fuzzing = []
