[package]
name = "libra-node"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
num_cpus = "1.10.1"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
parity-multiaddr = "0.5.0"
rayon = "1.2.0"
signal-hook = "0.1.10"
structopt = "0.3.2"
tokio = "0.1.22"

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto" }
solana-libra-admission-control-service = { path = "../admission_control/admission-control-service" }
solana-libra-config = { path = "../config" }
solana-libra-consensus = { path = "../consensus" }
solana_libra_crash_handler = { path = "../common/crash_handler" }
solana_libra_debug_interface = { path = "../common/debug_interface" }
solana-libra-executable-helpers = { path = "../common/executable-helpers" }
solana-libra-executor = { path = "../execution/executor" }
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
solana_libra_grpc_helpers = { path = "../common/grpc_helpers" }
solana-libra-logger = { path = "../common/logger" }
solana-libra-mempool = { path = "../mempool" }
solana-libra-metrics = { path = "../common/metrics" }
solana-libra-crypto = { path = "../crypto/crypto" }
solana-libra-network = { path = "../network" }
solana_libra_state_synchronizer = { path = "../state_synchronizer" }
solana_libra_storage_client = { path = "../storage/storage_client" }
solana-libra-storage-service = { path = "../storage/storage-service" }
solana-libra-types = { path = "../types" }
solana_libra_vm_runtime = { path = "../language/vm/vm_runtime" }
solana_libra_vm_validator = { path = "../vm_validator" }

[dev-dependencies]
solana-libra-config-builder = { path = "../config/config-builder" }
solana-libra-types = { path = "../types", features = ["testing"]}
