[package]
name = "libra-node"
version = "0.0.1-sol2"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra node"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
num_cpus = "1.10.1"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
parity-multiaddr = "0.5.0"
rayon = "1.2.0"
signal-hook = "0.1.10"
structopt = "0.3.2"
tokio = "0.1.22"

solana_libra_admission_control_proto = { path = "../admission_control/admission_control_proto", version = "0.0.1-sol2" }
solana-libra-admission-control-service = { path = "../admission_control/admission-control-service", version = "0.0.1-sol2" }
solana_libra_config = { path = "../config", version = "0.0.1-sol2" }
solana-libra-consensus = { path = "../consensus", version = "0.0.1-sol2" }
solana_libra_crash_handler = { path = "../common/crash_handler", version = "0.0.1-sol2" }
solana_libra_debug_interface = { path = "../common/debug_interface", version = "0.0.1-sol2" }
solana-libra-executable-helpers = { path = "../common/executable-helpers", version = "0.0.1-sol2" }
solana-libra-executor = { path = "../execution/executor", version = "0.0.1-sol2" }
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
solana_libra_grpc_helpers = { path = "../common/grpc_helpers", version = "0.0.1-sol2" }
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol2" }
solana-libra-mempool = { path = "../mempool", version = "0.0.1-sol2" }
solana_libra_metrics = { path = "../common/metrics", version = "0.0.1-sol2" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol2" }
solana-libra-network = { path = "../network", version = "0.0.1-sol2" }
solana_libra_state_synchronizer = { path = "../state_synchronizer", version = "0.0.1-sol2" }
solana_libra_storage_client = { path = "../storage/storage_client", version = "0.0.1-sol2" }
solana-libra-storage-service = { path = "../storage/storage-service", version = "0.0.1-sol2" }
solana_libra_types = { path = "../types", version = "0.0.1-sol2" }
solana_libra_vm_runtime = { path = "../language/vm/vm_runtime", version = "0.0.1-sol2" }
solana_libra_vm_validator = { path = "../vm_validator", version = "0.0.1-sol2" }

[dev-dependencies]
solana-libra-config-builder = { path = "../config/config-builder", version = "0.0.1-sol2" }
solana_libra_types = { path = "../types", version = "0.0.1-sol2", features = ["testing"]}
