[package]
name = "libra-swarm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra swarm"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
client_lib = { package = "solana-libra-client", path = "../client" }
ctrlc = { version = "3.1.3", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
structopt = "0.3.2"

solana-libra-config = { path = "../config" }
solana-libra-config-builder = { path = "../config/config-builder" }
solana_libra_debug_interface = { path = "../common/debug_interface" }
failure = { path = "../common/failure_ext", package = "solana_libra_failure_ext" }
solana-libra-generate-keypair = { path = "../config/generate-keypair" }
solana-libra-logger = { path = "../common/logger" }
solana-libra-crypto = { path = "../crypto/crypto" }
solana-libra-tools = { path = "../common/tools" }

[dev-dependencies]
solana-libra-crypto = { path = "../crypto/crypto", features = ["testing"]}

[features]
default = []
testing = ["solana-libra-crypto/testing", "client_lib/testing"]
