[package]
name = "libra-swarm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
client_lib = { package = "solana-libra-client", path = "../client", version = "0.1.0" }
ctrlc = { version = "3.1.3", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
structopt = "0.3.2"

solana-libra-config = { path = "../config", version = "0.1.0" }
solana-libra-config-builder = { path = "../config/config-builder", version = "0.1.0" }
solana_libra_debug_interface = { path = "../common/debug_interface", version = "0.1.0" }
failure = { path = "../common/failure_ext", version = "0.1.0", package = "solana_libra_failure_ext" }
solana-libra-generate-keypair = { path = "../config/generate-keypair", version = "0.1.0" }
solana-libra-logger = { path = "../common/logger", version = "0.1.0" }
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
solana-libra-tools = { path = "../common/tools", version = "0.1.0" }

[dev-dependencies]
solana-libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["testing"]}

[features]
default = []
testing = ["solana-libra-crypto/testing", "client_lib/testing"]
