[package]
name = "libra-swarm"
version = "0.0.1-sol3"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra swarm"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
client_lib = { package = "solana-libra-client", path = "../client", version = "0.0.1-sol3" }
ctrlc = { version = "3.1.3", default-features = false }
lazy_static = { version = "1.3.0", default-features = false }
structopt = "0.3.2"

solana_libra_config = { path = "../config", version = "0.0.1-sol3" }
solana-libra-config-builder = { path = "../config/config-builder", version = "0.0.1-sol3" }
solana_libra_debug_interface = { path = "../common/debug_interface", version = "0.0.1-sol3" }
failure = { path = "../common/failure_ext", version = "0.0.1-sol3", package = "solana_libra_failure_ext" }
solana-libra-generate-keypair = { path = "../config/generate-keypair", version = "0.0.1-sol3" }
solana_libra_logger = { path = "../common/logger", version = "0.0.1-sol3" }
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol3" }
solana_libra_tools = { path = "../common/tools", version = "0.0.1-sol3" }

[dev-dependencies]
solana_libra_crypto = { path = "../crypto/crypto", version = "0.0.1-sol3", features = ["testing"]}

[features]
default = []
testing = ["solana_libra_crypto/testing", "client_lib/testing"]
