[package]
name = "solana_libra_node"
version = "0.0.0-sol10"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra node"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
grpcio-sys = "0.4.4"
signal-hook = "0.1.10"
tokio = "0.1.22"

admission_control_proto = { path = "../admission_control/admission_control_proto", package = "solana_libra_admission_control_proto", version = "0.0.0-sol10" }
admission_control_service = { path = "../admission_control/admission_control_service", package = "solana_libra_admission_control_service", version = "0.0.0-sol10" }
config = { path = "../config", package = "solana_libra_config", version = "0.0.0-sol10" }
consensus = { path = "../consensus", package = "solana_libra_consensus", version = "0.0.0-sol10" }
crash_handler = { path = "../common/crash_handler", package = "solana_libra_crash_handler", version = "0.0.0-sol10" }
crypto = { path = "../crypto/legacy_crypto", package = "solana_libra_crypto", version = "0.0.0-sol10" }
debug_interface = { path = "../common/debug_interface", package = "solana_libra_debug_interface", version = "0.0.0-sol10" }
logger = { path = "../common/logger", package = "solana_libra_logger", version = "0.0.0-sol10" }
executable_helpers = { path = "../common/executable_helpers", package = "solana_libra_executable_helpers", version = "0.0.0-sol10" }
execution_proto = { path = "../execution/execution_proto", package = "solana_libra_execution_proto", version = "0.0.0-sol10" }
grpc_helpers = { path = "../common/grpc_helpers", package = "solana_libra_grpc_helpers", version = "0.0.0-sol10" }
mempool = { path = "../mempool", package = "solana_libra_mempool", version = "0.0.0-sol10" }
metrics = { path = "../common/metrics", package = "solana_libra_metrics", version = "0.0.0-sol10" }
execution_service = { path = "../execution/execution_service", package = "solana_libra_execution_service", version = "0.0.0-sol10" }
failure = { path = "../common/failure_ext", package = "solana_libra_failure_ext", version = "0.0.0-sol10" }
network = { path = "../network", package = "solana_libra_network", version = "0.0.0-sol10" }
proto_conv = { path = "../common/proto_conv", package = "solana_libra_proto_conv", version = "0.0.0-sol10" }
storage_client = { path = "../storage/storage_client", package = "solana_libra_storage_client", version = "0.0.0-sol10" }
storage_service = { path = "../storage/storage_service", package = "solana_libra_storage_service", version = "0.0.0-sol10" }
types = { path = "../types", package = "solana_libra_types", version = "0.0.0-sol10" }
vm_genesis = { path = "../language/vm/vm_genesis", package = "solana_libra_vm_genesis", version = "0.0.0-sol10" }
vm_validator = { path = "../vm_validator", package = "solana_libra_vm_validator", version = "0.0.0-sol10" }

[dev-dependencies]
config_builder = { path = "../config/config_builder", package = "solana_libra_config_builder", version = "0.0.0-sol10" }
